--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "webpack": "^1.13.3"
   },
   "dependencies": {
+    "node-uuid": "^1.4.7",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-redux": "^4.4.5",
