--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "webpack": "^1.13.3"
   },
   "dependencies": {
+    "blueimp-md5": "^2.4.0",
     "node-uuid": "^1.4.7",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
