--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "babel-core": "^6.18.0",
     "babel-loader": "^6.2.7",
+    "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
@@ -23,6 +24,7 @@
     "webpack": "^1.13.3"
   },
   "dependencies": {
+    "baobab": "^2.3.3",
     "blueimp-md5": "^2.4.0",
     "chance": "^1.0.4",
     "node-uuid": "^1.4.7",
