--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "node-uuid": "^1.4.7",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
+    "react-intl": "^2.1.5",
     "react-redux": "^4.4.5",
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0"
